tests/sksl/errors/SwitchDuplicateDefault.glsl
### Compilation failed:

error: 4: expected '}', but found 'default'
        default:
        ^^^^^^^
1 error
